--- a/js/data/locale/uz/Cyrl/sysres.json
+++ b/js/data/locale/uz/Cyrl/sysres.json
@@ -47,6 +47,54 @@
     "MMM12": "дек",
     "NN12": "де",
     "N12": "д",
+    "LLLL1": "Январ",
+    "LLL1": "Янв",
+    "LL1": "Ян",
+    "L1": "Я",
+    "LLLL2": "Феврал",
+    "LLL2": "Фев",
+    "LL2": "Фе",
+    "L2": "Ф",
+    "LLLL3": "Март",
+    "LLL3": "Мар",
+    "LL3": "Ма",
+    "L3": "М",
+    "LLLL4": "Апрел",
+    "LLL4": "Апр",
+    "LL4": "Ап",
+    "L4": "А",
+    "LLLL5": "Май",
+    "LLL5": "Май",
+    "LL5": "Ма",
+    "L5": "М",
+    "LLLL6": "Июн",
+    "LLL6": "Июн",
+    "LL6": "Ию",
+    "L6": "И",
+    "LLLL7": "Июл",
+    "LLL7": "Июл",
+    "LL7": "Ию",
+    "L7": "И",
+    "LLLL8": "Август",
+    "LLL8": "Авг",
+    "LL8": "Ав",
+    "L8": "А",
+    "LLLL9": "Сентябр",
+    "LLL9": "Сен",
+    "LL9": "Се",
+    "L9": "С",
+    "LLLL10": "Октябр",
+    "LLL10": "Окт",
+    "LL10": "Ок",
+    "L10": "О",
+    "LLLL11": "Ноябр",
+    "LLL11": "Ноя",
+    "LL11": "Но",
+    "L11": "Н",
+    "LLLL12": "Декабр",
+    "LLL12": "Дек",
+    "LL12": "Де",
+    "L12": "Д",
     "EEEE0": "якшанба",
     "EEE0": "якш",
     "EE0": "як",
@@ -75,6 +123,34 @@
     "EEE6": "шан",
     "EE6": "ша",
     "E6": "Ш",
+    "cccc0": "Якшанба",
+    "ccc0": "Якш",
+    "cc0": "Як",
+    "c0": "Я",
+    "cccc1": "Душанба",
+    "ccc1": "Душ",
+    "cc1": "Ду",
+    "c1": "Д",
+    "cccc2": "Сешанба",
+    "ccc2": "Сеш",
+    "cc2": "Се",
+    "c2": "С",
+    "cccc3": "Чоршанба",
+    "ccc3": "Чор",
+    "cc3": "Чо",
+    "c3": "Ч",
+    "cccc4": "Пайшанба",
+    "ccc4": "Пай",
+    "cc4": "Па",
+    "c4": "П",
+    "cccc5": "Жума",
+    "ccc5": "Жум",
+    "cc5": "Жу",
+    "c5": "Ж",
+    "cccc6": "Шанба",
+    "ccc6": "Шан",
+    "cc6": "Ша",
+    "c6": "Ш",
     "a0": "ТО",
     "a1": "ТК",
     "G-1": "э.а.",
