--- a/js/data/locale/zh/sysres.json
+++ b/js/data/locale/zh/sysres.json
@@ -79,6 +79,14 @@
     "a1": "下午",
     "G-1": "BCE",
     "G1": "CE",
+    "azh0": "凌晨",
+    "azh1": "早上",
+    "azh2": "上午",
+    "azh3": "正午",
+    "azh4": "下午",
+    "azh5": "傍晚",
+    "azh6": "晚上",
+    "ordinalChoice": "#{num}天",
     "1#1 millisecond|#{num} milliseconds": "#{num}毫秒",
     "1#1 second|#{num} seconds": "#{num}秒钟",
     "1#1 minute|#{num} minutes": "#{num}分钟",
