Update zh/sysres.json, ja/sysres.json. seperator values were removed while generating value through tool code. Manual korean millisecond value

--- a/js/data/locale/ja/sysres.json
+++ b/js/data/locale/ja/sysres.json
@@ -158,5 +158,7 @@
     "separatorLong": " ",
     "finalSeparatorLong": " ",
     "separatorMedium": " ",
-    "finalSeparatorMedium": " "
+    "finalSeparatorMedium": " ",
+    "separatorShort": "",
+    "finalSeparatorShort": ""
 }
