Fix the map from persian-algo to gregorian
For some reason, the name of the persian-algo calendar
got overwritten with a long dash instead of the
regular ASCII dash. This puts it back again.

--- a/js/data/locale/dateformats.json
+++ b/js/data/locale/dateformats.json
@@ -153,7 +153,7 @@
     "julian": "gregorian",
     "thaisolar": "gregorian",
     "persian": "gregorian",
-    "persian–algo": "gregorian",
+    "persian-algo": "gregorian",
     "han": "gregorian",
     "ethiopic": {
         "order": {
