Update to IANA tzdata 2019a
Updated ilib version number to 14.2.1

--- a/js/data/locale/zoneinfo/Africa/Windhoek.json
+++ b/js/data/locale/zoneinfo/Africa/Windhoek.json
@@ -1,11 +1,5 @@
 {
-    "e": {
-        "c": "WAT",
-        "m": 4,
-        "r": "0>1",
-        "t": "2:0"
-    },
-    "f": "{c}",
+    "f": "CAT",
     "o": "2:0",
     "c": "NA",
     "n": "Namibia {c} Time"
