--- a/js/data/locale/zoneinfo/Africa/Sao_Tome.json
+++ b/js/data/locale/zoneinfo/Africa/Sao_Tome.json
@@ -1,6 +1,6 @@
 {
-    "f": "WAT",
-    "o": "1:0",
+    "f": "GMT",
+    "o": "0:0",
     "c": "ST",
-    "n": "Greenwich {c} Time"
+    "n": "Sao Tome {c} Time"
 }
