--- a/js/data/locale/zoneinfo/zonetab.json
+++ b/js/data/locale/zoneinfo/zonetab.json
@@ -527,6 +527,7 @@
     "KZ": [
         "Asia/Almaty",
         "Asia/Qyzylorda",
+        "Asia/Qostanay",
         "Asia/Aqtobe",
         "Asia/Aqtau",
         "Asia/Atyrau",
@@ -770,9 +771,9 @@
         "Europe/Kaliningrad",
         "Europe/Moscow",
         "Europe/Simferopol",
-        "Europe/Volgograd",
         "Europe/Kirov",
         "Europe/Astrakhan",
+        "Europe/Volgograd",
         "Europe/Saratov",
         "Europe/Ulyanovsk",
         "Europe/Samara",
