DateFmtInfo object now works. All unit tests pass.

--- a/js/data/locale/ar/sysres.json
+++ b/js/data/locale/ar/sysres.json
@@ -79,6 +79,92 @@
     "a1": "م",
     "G-1": "ق. م",
     "G1": "ب.م",
+    "MMMM7-hebrew": "تشري",
+    "MMM7-hebrew": "تشري",
+    "NN7-hebrew": "تش",
+    "N7-hebrew": "ت",
+    "MMMM8-hebrew": "مرحشوان",
+    "MMM8-hebrew": "مرحشوان",
+    "NN8-hebrew": "مر",
+    "N8-hebrew": "م",
+    "MMMM9-hebrew": "كيسلو",
+    "MMM9-hebrew": "كيسلو",
+    "NN9-hebrew": "كي",
+    "N9-hebrew": "ك",
+    "MMMM10-hebrew": "طيفت",
+    "MMM10-hebrew": "طيفت",
+    "NN10-hebrew": "طي",
+    "N10-hebrew": "ط",
+    "MMMM11-hebrew": "شباط",
+    "MMM11-hebrew": "شباط",
+    "NN11-hebrew": "شب",
+    "N11-hebrew": "ش",
+    "MMMM12-leap-hebrew": "آذار الأول",
+    "MMM12-leap-hebrew": "آذار الأول",
+    "NN12-leap-hebrew": "آذ",
+    "N12-leap-hebrew": "آ",
+    "MMMM12-hebrew": "آذار",
+    "MMM12-hebrew": "آذار",
+    "NN12-hebrew": "آذ",
+    "N12-hebrew": "آ",
+    "MMMM1-hebrew": "نيسان",
+    "MMM1-hebrew": "نيسان",
+    "NN1-hebrew": "ني",
+    "N1-hebrew": "ن",
+    "MMMM2-hebrew": "أيار",
+    "MMM2-hebrew": "أيار",
+    "NN2-hebrew": "أي",
+    "N2-hebrew": "أ",
+    "MMMM3-hebrew": "سيفان",
+    "MMM3-hebrew": "سيفان",
+    "NN3-hebrew": "سي",
+    "N3-hebrew": "س",
+    "MMMM4-hebrew": "تموز",
+    "MMM4-hebrew": "تموز",
+    "NN4-hebrew": "تم",
+    "N4-hebrew": "ت",
+    "MMMM5-hebrew": "آب",
+    "MMM5-hebrew": "آب",
+    "NN5-hebrew": "آب",
+    "N5-hebrew": "آ",
+    "MMMM6-hebrew": "أيلول",
+    "MMM6-hebrew": "أيلول",
+    "NN6-hebrew": "أي",
+    "N6-hebrew": "أ",
+    "MMMM13-leap-hebrew": "آذار الثاني",
+    "MMM13-leap-hebrew": "آذار الثاني",
+    "NN13-leap-hebrew": "آذ",
+    "N13-leap-hebrew": "آ",
+    "EEEE0-hebrew": "الأحد",
+    "EEE0-hebrew": "الأحد",
+    "EE0-hebrew": "أحد",
+    "E0-hebrew": "ح",
+    "EEEE1-hebrew": "الاثنين",
+    "EEE1-hebrew": "الاثنين",
+    "EE1-hebrew": "إثنين",
+    "E1-hebrew": "ن",
+    "EEEE2-hebrew": "الثلاثاء",
+    "EEE2-hebrew": "الثلاثاء",
+    "EE2-hebrew": "ثلاثاء",
+    "E2-hebrew": "ث",
+    "EEEE3-hebrew": "الأربعاء",
+    "EEE3-hebrew": "الأربعاء",
+    "EE3-hebrew": "أربعاء",
+    "E3-hebrew": "ر",
+    "EEEE4-hebrew": "الخميس",
+    "EEE4-hebrew": "الخميس",
+    "EE4-hebrew": "خميس",
+    "E4-hebrew": "خ",
+    "EEEE5-hebrew": "الجمعة",
+    "EEE5-hebrew": "الجمعة",
+    "EE5-hebrew": "جمعة",
+    "E5-hebrew": "ج",
+    "EEEE6-hebrew": "السبت",
+    "EEE6-hebrew": "السبت",
+    "EE6-hebrew": "سبت",
+    "E6-hebrew": "س",
+    "a0-hebrew": "ص",
+    "a1-hebrew": "م",
     "1#1 millisecond|#{num} milliseconds": "zero#{num} ملي ثانية|one#{num} ملي ثانية|two#{num} ملي ثانية|few#{num} ملي ثانية|many#{num} ملي ثانية|#{num} ملي ثانية",
     "1#1 second|#{num} seconds": "zero#{num} ثانية|one#ثانية|two#ثانيتان|few#{num} ثوان|many#{num} ثانية|#{num} ثانية",
     "1#1 minute|#{num} minutes": "zero#{num} دقيقة|one#دقيقة|two#دقيقتان|few#{num} دقائق|many#{num} دقيقة|#{num} دقيقة",
