--- a/js/data/locale/he/sysres.json
+++ b/js/data/locale/he/sysres.json
@@ -79,6 +79,92 @@
     "a1": "אחה״צ",
     "G-1": "BCE",
     "G1": "CE",
+    "MMMM7-hebrew": "תשרי",
+    "MMM7-hebrew": "תשרי",
+    "NN7-hebrew": "תש",
+    "N7-hebrew": "ת",
+    "MMMM8-hebrew": "חשוון",
+    "MMM8-hebrew": "חשון",
+    "NN8-hebrew": "חש",
+    "N8-hebrew": "ח",
+    "MMMM9-hebrew": "כסלו",
+    "MMM9-hebrew": "כסלו",
+    "NN9-hebrew": "כס",
+    "N9-hebrew": "כ",
+    "MMMM10-hebrew": "טבת",
+    "MMM10-hebrew": "טבת",
+    "NN10-hebrew": "טב",
+    "N10-hebrew": "ט",
+    "MMMM11-hebrew": "שבט",
+    "MMM11-hebrew": "שבט",
+    "NN11-hebrew": "שב",
+    "N11-hebrew": "ש",
+    "MMMM12-leap-hebrew": "אדר א׳",
+    "MMM12-leap-hebrew": "אדר א׳",
+    "NN12-leap-hebrew": "אד",
+    "N12-leap-hebrew": "א",
+    "MMMM12-hebrew": "אדר",
+    "MMM12-hebrew": "אדר",
+    "NN12-hebrew": "אד",
+    "N12-hebrew": "א",
+    "MMMM1-hebrew": "ניסן",
+    "MMM1-hebrew": "ניסן",
+    "NN1-hebrew": "ני",
+    "N1-hebrew": "נ",
+    "MMMM2-hebrew": "אייר",
+    "MMM2-hebrew": "אייר",
+    "NN2-hebrew": "אי",
+    "N2-hebrew": "א",
+    "MMMM3-hebrew": "סיוון",
+    "MMM3-hebrew": "סיון",
+    "NN3-hebrew": "סי",
+    "N3-hebrew": "ס",
+    "MMMM4-hebrew": "תמוז",
+    "MMM4-hebrew": "תמוז",
+    "NN4-hebrew": "תמ",
+    "N4-hebrew": "ת",
+    "MMMM5-hebrew": "אב",
+    "MMM5-hebrew": "אב",
+    "NN5-hebrew": "אב",
+    "N5-hebrew": "א",
+    "MMMM6-hebrew": "אלול",
+    "MMM6-hebrew": "אלול",
+    "NN6-hebrew": "אל",
+    "N6-hebrew": "א",
+    "MMMM13-leap-hebrew": "אדר ב׳",
+    "MMM13-leap-hebrew": "אדר ב׳",
+    "NN13-leap-hebrew": "אד",
+    "N13-leap-hebrew": "א",
+    "EEEE0-hebrew": "יום ראשון",
+    "EEE0-hebrew": "יום א׳",
+    "EE0-hebrew": "א׳",
+    "E0-hebrew": "א׳",
+    "EEEE1-hebrew": "יום שני",
+    "EEE1-hebrew": "יום ב׳",
+    "EE1-hebrew": "ב׳",
+    "E1-hebrew": "ב׳",
+    "EEEE2-hebrew": "יום שלישי",
+    "EEE2-hebrew": "יום ג׳",
+    "EE2-hebrew": "ג׳",
+    "E2-hebrew": "ג׳",
+    "EEEE3-hebrew": "יום רביעי",
+    "EEE3-hebrew": "יום ד׳",
+    "EE3-hebrew": "ד׳",
+    "E3-hebrew": "ד׳",
+    "EEEE4-hebrew": "יום חמישי",
+    "EEE4-hebrew": "יום ה׳",
+    "EE4-hebrew": "ה׳",
+    "E4-hebrew": "ה׳",
+    "EEEE5-hebrew": "יום שישי",
+    "EEE5-hebrew": "יום ו׳",
+    "EE5-hebrew": "ו׳",
+    "E5-hebrew": "ו׳",
+    "EEEE6-hebrew": "יום שבת",
+    "EEE6-hebrew": "שבת",
+    "EE6-hebrew": "ש׳",
+    "E6-hebrew": "ש׳",
+    "a0-hebrew": "לפנה״צ",
+    "a1-hebrew": "אחה״צ",
     "1#1 millisecond|#{num} milliseconds": "one#אלפית שנייה {num}|two#{num} אלפיות שנייה|many#{num} אלפיות שנייה|#{num} אלפיות שנייה",
     "1#1 second|#{num} seconds": "one#שניה|two#שתי שניות|many#‏{num} שניות|#{num} שניות",
     "1#1 minute|#{num} minutes": "one#דקה|two#שתי דקות|many#{num} דקות|#{num} דקות",
