--- a/js/data/locale/sysres.json
+++ b/js/data/locale/sysres.json
@@ -148,7 +148,8 @@
     "MMMM10-hebrew": "Teveth",
     "MMMM11-hebrew": "Shevat",
     "MMMM12-hebrew": "Adar",
-    "MMMM13-hebrew": "Adar II",
+    "MMMM12-leap-hebrew": "Adar I",
+    "MMMM13-leap-hebrew": "Adar II",
     "E0-hebrew": "R",
     "E1-hebrew": "S",
     "E2-hebrew": "S",
