Add countryCode from files that haven't been automatically updated

--- a/js/data/locale/und/AU/numplan.json
+++ b/js/data/locale/und/AU/numplan.json
@@ -1,8 +1,9 @@
 {
     "region": "AU",
-    "skipTrunk": true,
-    "trunkCode": "0",
+    "countryCode": "61",
     "iddCode": "0011",
+    "trunkCode": "0",
+    "skipTrunk": true,
     "dialingPlan": "open",
     "extendedAreaCodes": true,
     "commonFormatChars": " ()",
