--- a/js/data/locale/und/BE/numplan.json
+++ b/js/data/locale/und/BE/numplan.json
@@ -1,8 +1,9 @@
 {
     "region": "BE",
-    "skipTrunk": true,
-    "trunkCode": "0",
+    "countryCode": "32",
     "iddCode": "00",
+    "trunkCode": "0",
+    "skipTrunk": true,
     "dialingPlan": "open",
     "findExtensions": true,
     "contextFree": false,
