--- a/js/data/locale/und/IT/numplan.json
+++ b/js/data/locale/und/IT/numplan.json
@@ -1,8 +1,9 @@
 {
     "region": "IT",
+    "countryCode": "39",
+    "iddCode": "00",
     "skipTrunk": false,
     "trunkCode": "0",
-    "iddCode": "00",
     "dialingPlan": "open",
     "commonFormatChars": " ()-/",
     "fieldLengths": {
