--- a/js/data/locale/und/CN/numplan.json
+++ b/js/data/locale/und/CN/numplan.json
@@ -1,8 +1,9 @@
 {
     "region": "CN",
-    "skipTrunk": true,
-    "trunkCode": "0",
+    "countryCode": "86",
     "iddCode": "00",
+    "trunkCode": "0",
+    "skipTrunk": true,
     "dialingPlan": "open",
     "commonFormatChars": " ()-",
     "fieldLengths": {
